Fixed issue with misalignment of fluxels.

--- a/frontend/src/components/home-page/header-main/fluxel-grid/FluxelGrid.module.scss
+++ b/frontend/src/components/home-page/header-main/fluxel-grid/FluxelGrid.module.scss
@@ -1,4 +1,39 @@
-.fluxelGrid,
+.fluxelGrid {
+  mix-blend-mode: multiply;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; /* Center items within each row (horizontal centering) */
+  align-content: center; /* Center the entire group of rows vertically */
+  pointer-events: none;
+  box-sizing: border-box;
+  aspect-ratio: 4/3;
+  /* Note that scaling with vmax does NOT account for the location bar in iOS Safari,
+  so that means the top and bottom rows are slightly clipped, which isn't really
+  a problem. It looks like the solution would be JavaScript, but that kinda sucks.
+  */
+  height: 100vmax;
+  @media (min-aspect-ratio: 4/3) {
+    height: auto;
+    width: 100vmax;
+  }
+  * {
+    pointer-events: none;
+  }
+  > * {
+    // Here because some of the same styles need applied to
+    // the placeholders as well the actual fluxels
+    position: relative;
+    flex: 1 1 calc(100% / var(--cols));
+    aspect-ratio: 1 / 1;
+    outline: 1px solid rgba(20, 20, 20, 0.7);
+    border-radius: 1px;
+    image-rendering: pixelated;
+    box-sizing: content-box;
+    background-repeat: no-repeat;
+    overflow: hidden;
+  }
+}
+
 .overlayWrapper {
   // mix-blend-mode:color-burn; // Try again and compare with multiply
   // mix-blend-mode:luminosity; // Try again and compare with multiply
@@ -35,14 +70,7 @@
     box-sizing: content-box;
     overflow: hidden;
     max-height: 8.33333333%;
-  }
-}
-
-.fluxelGrid {
-  mix-blend-mode: multiply;
-  > * {
-    outline: 1px solid rgba(20, 20, 20, 0.7);
-    border-radius: 1px;
+    will-change: background-color;
   }
 }
 
@@ -50,12 +78,6 @@
   visibility: hidden;
   color: white;
   overflow: hidden;
-}
-
-.overlayWrapper {
-  * {
-    will-change: background-color;
-  }
 }
 
 .overlay {
